--- a/index.html
+++ b/index.html
@@ -3,37 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Noticias Actuales - Tu fuente de información</title>
+    <title>ReinierTutoriales | Blog de Tecnología</title>
     <style>
-        /* Reset y estilos generales */
+        :root {
+            /* Tema claro (default) */
+            --primary-color: #2563eb;  /* Azul tecnológico */
+            --secondary-color: #1e40af;
+            --bg-color: #ffffff;
+            --text-color: #1f2937;
+            --card-bg: #f9fafb;
+            --border-color: #e5e7eb;
+        }
+
+        [data-theme="dark"] {
+            /* Tema oscuro */
+            --primary-color: #3b82f6;
+            --secondary-color: #60a5fa;
+            --bg-color: #1f2937;
+            --text-color: #f9fafb;
+            --card-bg: #111827;
+            --border-color: #374151;
+        }
+
         * {
             margin: 0;
             padding: 0;
             box-sizing: border-box;
-            font-family: 'Arial', sans-serif;
-        }
-
-        :root {
-            --primary-color: #2c3e50;
-            --secondary-color: #3498db;
-            --text-color: #333;
-            --light-bg: #f5f6fa;
+            font-family: 'Inter', system-ui, sans-serif;
+            transition: background 0.3s, color 0.3s;
         }
 
         body {
-            line-height: 1.6;
+            background-color: var(--bg-color);
             color: var(--text-color);
+            line-height: 1.6;
         }
 
-        /* Header */
+        /* Header estático */
         header {
             background: var(--primary-color);
             color: white;
             padding: 1rem;
-            position: fixed;
-            width: 100%;
+            position: sticky;
             top: 0;
             z-index: 1000;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
         }
 
         .nav-container {
@@ -46,74 +60,53 @@
 
         .logo {
             font-size: 1.5rem;
-            font-weight: bold;
+            font-weight: 700;
+            display: flex;
+            align-items: center;
+            gap: 10px;
+        }
+
+        .logo img {
+            height: 30px;
         }
 
         nav ul {
             display: flex;
             list-style: none;
-        }
-
-        nav ul li {
-            margin-left: 2rem;
+            gap: 1.5rem;
         }
 
         nav ul li a {
             color: white;
             text-decoration: none;
-            transition: color 0.3s;
+            font-weight: 500;
         }
 
-        nav ul li a:hover {
-            color: var(--secondary-color);
+        /* Botón tema oscuro/claro */
+        .theme-toggle {
+            background: transparent;
+            border: none;
+            color: white;
+            cursor: pointer;
+            font-size: 1.2rem;
         }
 
-        /* Main content */
+        /* Contenido principal */
         .container {
             max-width: 1200px;
-            margin: 100px auto 20px;
-            padding: 0 20px;
+            margin: 2rem auto;
+            padding: 0 1.5rem;
             display: grid;
             grid-template-columns: 3fr 1fr;
-            gap: 30px;
+            gap: 2rem;
         }
 
-        /* Artículo destacado */
-        .featured-article {
-            grid-column: 1 / -1;
-            margin-bottom: 40px;
-        }
-
-        .featured-article img {
-            width: 100%;
-            height: 400px;
-            object-fit: cover;
-            border-radius: 10px;
-        }
-
-        .featured-content {
-            padding: 20px;
-            background: var(--light-bg);
-            border-radius: 0 0 10px 10px;
-        }
-
-        /* Grid de noticias */
-        .news-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 20px;
-        }
-
+        /* Tarjetas de noticias tecnológicas */
         .news-card {
-            background: white;
-            border-radius: 10px;
+            background: var(--card-bg);
+            border-radius: 12px;
             overflow: hidden;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-            transition: transform 0.3s;
-        }
-
-        .news-card:hover {
-            transform: translateY(-5px);
+            border: 1px solid var(--border-color);
         }
 
         .news-card img {
@@ -123,39 +116,18 @@
         }
 
         .card-content {
-            padding: 15px;
+            padding: 1.5rem;
         }
 
         .category {
             display: inline-block;
-            padding: 5px 10px;
-            background: var(--secondary-color);
+            padding: 0.25rem 0.75rem;
+            background: var(--primary-color);
             color: white;
-            border-radius: 5px;
-            font-size: 0.8rem;
-            margin-bottom: 10px;
-        }
-
-        /* Sidebar */
-        .sidebar {
-            background: var(--light-bg);
-            padding: 20px;
-            border-radius: 10px;
-        }
-
-        .sidebar-widget {
-            margin-bottom: 30px;
-        }
-
-        .sidebar-widget h3 {
-            margin-bottom: 15px;
-            color: var(--primary-color);
-        }
-
-        .recent-posts li {
-            margin-bottom: 10px;
-            padding-bottom: 10px;
-            border-bottom: 1px solid #ddd;
+            border-radius: 20px;
+            font-size: 0.75rem;
+            font-weight: 600;
+            margin-bottom: 0.75rem;
         }
 
         /* Footer */
@@ -164,7 +136,7 @@
             color: white;
             text-align: center;
             padding: 2rem;
-            margin-top: 50px;
+            margin-top: 3rem;
         }
 
         /* Responsive */
@@ -176,128 +148,65 @@
             nav ul {
                 display: none;
             }
-
-            .news-grid {
-                grid-template-columns: 1fr;
-            }
-        }
-
-        /* Utilidades */
-        .meta-info {
-            font-size: 0.9rem;
-            color: #666;
-            margin: 10px 0;
-        }
-
-        .btn {
-            display: inline-block;
-            padding: 10px 20px;
-            background: var(--secondary-color);
-            color: white;
-            text-decoration: none;
-            border-radius: 5px;
-            margin-top: 10px;
         }
     </style>
 </head>
 <body>
     <header>
         <div class="nav-container">
-            <div class="logo">Noticias Actuales</div>
+            <div class="logo">
+                <span>ReinierTutoriales</span>
+            </div>
             <nav>
                 <ul>
-                    <li><a href="#inicio">Inicio</a></li>
-                    <li><a href="#politica">Política</a></li>
-                    <li><a href="#tecnologia">Tecnología</a></li>
-                    <li><a href="#economia">Economía</a></li>
-                    <li><a href="#deportes">Deportes</a></li>
+                    <li><a href="#">Inicio</a></li>
+                    <li><a href="#">Programación</a></li>
+                    <li><a href="#">Hardware</a></li>
+                    <li><a href="#">IA</a></li>
+                    <li><a href="#">Tutoriales</a></li>
                 </ul>
             </nav>
+            <button class="theme-toggle" aria-label="Cambiar tema">🌓</button>
         </div>
     </header>
 
     <main class="container">
-        <!-- Artículo destacado -->
-        <article class="featured-article">
-            <img src="https://source.unsplash.com/random/1200x600" alt="Noticia destacada">
-            <div class="featured-content">
-                <span class="category">Última hora</span>
-                <h2>Título de la noticia destacada</h2>
-                <p class="meta-info">Publicado el 10 de marzo, 2023 por Autor</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam voluptates...</p>
+        <article class="news-card">
+            <img src="https://source.unsplash.com/random/800x400/?tech" alt="Novedades en IA">
+            <div class="card-content">
+                <span class="category">Inteligencia Artificial</span>
+                <h2>Lo último en GPT-5: ¿Qué esperar?</h2>
+                <p>Analizamos los rumores y filtraciones sobre la próxima generación de modelos de OpenAI.</p>
                 <a href="#" class="btn">Leer más</a>
             </div>
         </article>
 
-        <!-- Grid de noticias -->
-        <section class="news-grid">
-            <!-- Repetir esta tarjeta para cada noticia -->
-            <article class="news-card">
-                <img src="https://source.unsplash.com/random/400x300" alt="Noticia">
-                <div class="card-content">
-                    <span class="category">Tecnología</span>
-                    <h3>Título de la noticia</h3>
-                    <p class="meta-info">Publicado el 10 de marzo, 2023</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam voluptates...</p>
-                    <a href="#" class="btn">Leer más</a>
-                </div>
-            </article>
-            <!-- Más tarjetas de noticias -->
-        </section>
-
-        <!-- Sidebar -->
-        <aside class="sidebar">
-            <div class="sidebar-widget">
-                <h3>Últimas noticias</h3>
-                <ul class="recent-posts">
-                    <li><a href="#">Título de noticia reciente 1</a></li>
-                    <li><a href="#">Título de noticia reciente 2</a></li>
-                    <li><a href="#">Título de noticia reciente 3</a></li>
-                </ul>
-            </div>
-
-            <div class="sidebar-widget">
-                <h3>Categorías</h3>
-                <ul class="categories">
-                    <li><a href="#">Política</a></li>
-                    <li><a href="#">Tecnología</a></li>
-                    <li><a href="#">Economía</a></li>
-                    <li><a href="#">Deportes</a></li>
-                </ul>
-            </div>
-        </aside>
+        <!-- Más noticias tecnológicas -->
     </main>
 
     <footer>
-        <p>&copy; 2023 Noticias Actuales - Todos los derechos reservados</p>
+        <p>&copy; <span id="year"></span> ReinierTutoriales. Todos los derechos reservados.</p>
     </footer>
 
     <script>
-        // JavaScript básico para funcionalidades
-        document.addEventListener('DOMContentLoaded', function() {
-            // Menú responsive
-            const menuToggle = document.createElement('div');
-            menuToggle.innerHTML = '☰';
-            menuToggle.classList.add('menu-toggle');
-            document.querySelector('.nav-container').appendChild(menuToggle);
+        // Tema oscuro/claro
+        const themeToggle = document.querySelector('.theme-toggle');
+        const prefersDarkScheme = window.matchMedia('(prefers-color-scheme: dark)');
 
-            menuToggle.addEventListener('click', function() {
-                document.querySelector('nav ul').classList.toggle('show');
-            });
+        // Detecta el tema del sistema
+        if (prefersDarkScheme.matches) {
+            document.documentElement.setAttribute('data-theme', 'dark');
+        }
 
-            // Actualizar año del footer
-            document.querySelector('footer p').innerHTML = `&copy; ${new Date().getFullYear()} Noticias Actuales - Todos los derechos reservados`;
-
-            // Smooth scroll
-            document.querySelectorAll('a[href^="#"]').forEach(anchor => {
-                anchor.addEventListener('click', function(e) {
-                    e.preventDefault();
-                    document.querySelector(this.getAttribute('href')).scrollIntoView({
-                        behavior: 'smooth'
-                    });
-                });
-            });
+        // Botón manual
+        themeToggle.addEventListener('click', () => {
+            const currentTheme = document.documentElement.getAttribute('data-theme');
+            const newTheme = currentTheme === 'dark' ? 'light' : 'dark';
+            document.documentElement.setAttribute('data-theme', newTheme);
         });
+
+        // Año actual en el footer
+        document.getElementById('year').textContent = new Date().getFullYear();
     </script>
 </body>
 </html>
