--- a/index.html
+++ b/index.html
@@ -282,17 +282,19 @@
     </header>
 
     <main class="container">
+        
         <article class="article">
             <div class="meta">
-                <span>10 Junio 2023</span>
+                <span>27 Marzo 2025</span>
                 <span>·</span>
-                <span>8 min lectura</span>
+                <span>10 min lectura</span>
             </div>
-            <span class="tag">Inteligencia Artificial</span>
-            <h2>Cómo GPT-5 está revolucionando el desarrollo web</h2>
-            <p>Exploramos las nuevas capacidades de los modelos de lenguaje y cómo integrarlos en tus proyectos...</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in dui mauris. Vivamus hendrerit arcu sed erat molestie vehicula...</p>
-        </article>
+            <span class="tag">macOSl</span>
+            <span class="tag">Hackintosh</span>
+            <h2><a href="/broadcom-macos15-soporte/">Soporte para WiFi y Bluetooth Broadcom en macOS 15 Sequoia</a></h2>
+            <p>Guía completa para activar WiFi/Bluetooth Broadcom en macOS 15 Sequoia, incluyendo kexts necesarios y configuración de OpenCore.</p>
+            a href="/broadcom-macos15-soporte/" class="read-more">Leer artículo completo →</a>
+    </article>
 
         <article class="article">
             <div class="meta">
